--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importar Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 html, body {
   margin: 0;
   padding: 0;
   color: #2a2a2a;
-  font-family: 'Sour Gummy', system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
+  font-family: 'Poppins', 'Sour Gummy', system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
